TestCases/ASTTests/SemanticErrorsTests/tests/test40_result.json_dep
{"ast": {"children": [{"children": [{"children": [{"children": [], "id": 3}, {"children": [], "id": 4}], "id": 2}, {"children": [{"children": [], "id": 6}, {"children": [], "id": 7}], "id": 5}, {"children": [{"children": [], "id": 9}, {"children": [], "id": 10}, {"children": [{"children": [{"children": [], "id": 13}, {"children": [{"children": [{"children": [], "id": 16}], "id": 15}, {"children": [], "id": 17}, {"children": [], "id": 18}], "id": 14}], "id": 12}, {"children": [{"children": [], "id": 20}], "id": 19}], "id": 11}], "id": 8}], "id": 1}], "id": 0}, "symbol_tables": [{"prev": null, "entries": [{"type": ["INT", "", [false]], "name": "a", "value": null, "firstDeclared": 3, "firstUsed": null}, {"type": ["INT", "", [false]], "name": "True", "value": null, "firstDeclared": 6, "firstUsed": null}, {"type": ["Func:INT:[]", "", [false]], "name": "main", "value": null, "firstDeclared": 9, "firstUsed": null}, {"type": ["Func:PTR:[]", "", [false]], "name": "malloc", "value": null, "firstDeclared": 0, "firstUsed": null}, {"type": ["Func:PTR:[]", "", [false]], "name": "calloc", "value": null, "firstDeclared": 0, "firstUsed": null}, {"type": ["Func:VOID:[]", "", [false]], "name": "free", "value": null, "firstDeclared": 0, "firstUsed": null}, {"type": ["Func:PTR:[]", "", [false]], "name": "realloc", "value": null, "firstDeclared": 0, "firstUsed": null}]}, {"prev": 0, "entries": []}, {"prev": 1, "entries": [{"type": ["INT", "", [false]], "name": "True", "value": null, "firstDeclared": 13, "firstUsed": null}]}], "ast_table": [{"text": "Start", "linenr": 3, "virtuallinenr": 1, "file": "read_file.c", "symbol_table_nr": 0}, {"text": "Code", "linenr": 3, "virtuallinenr": 1, "file": "read_file.c", "symbol_table_nr": 0}, {"text": "Declaration", "linenr": 3, "virtuallinenr": 1, "file": "read_file.c", "symbol_table_nr": 0}, {"text": "a", "linenr": 3, "virtuallinenr": 1, "file": "read_file.c", "symbol_table_nr": 0, "type": "IDENTIFIER"}, {"text": "3", "linenr": 3, "virtuallinenr": 1, "file": "read_file.c", "symbol_table_nr": 0, "type": "INT"}, {"text": "Declaration", "linenr": 4, "virtuallinenr": 2, "file": "read_file.c", "symbol_table_nr": 0}, {"text": "True", "linenr": 4, "virtuallinenr": 2, "file": "read_file.c", "symbol_table_nr": 0, "type": "IDENTIFIER"}, {"text": "1", "linenr": 4, "virtuallinenr": 2, "file": "read_file.c", "symbol_table_nr": 0, "type": "INT"}, {"text": "Function", "linenr": 6, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 0}, {"text": "main", "linenr": 6, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 1, "type": "IDENTIFIER"}, {"text": "Parameters", "linenr": 6, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 1}, {"text": "Code", "linenr": 8, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 1}, {"text": "Declaration", "linenr": 8, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 2}, {"text": "True", "linenr": 8, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 2, "type": "IDENTIFIER"}, {"text": "Expr", "linenr": 8, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 2}, {"text": "Dereference", "linenr": 8, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 2}, {"text": "True", "linenr": 8, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 2, "type": "IDENTIFIER"}, {"text": "-", "linenr": 8, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 2, "type": "T__15"}, {"text": "20", "linenr": 8, "virtuallinenr": 3, "file": "read_file.c", "symbol_table_nr": 2, "type": "INT"}, {"text": "Return", "linenr": 10, "virtuallinenr": 4, "file": "read_file.c", "symbol_table_nr": 2}, {"text": "0", "linenr": 10, "virtuallinenr": 4, "file": "read_file.c", "symbol_table_nr": 2, "type": "INT"}]}